# git-remote-s3

./: .gitignore  README.md  pyproject.toml
git_remote_s3/: lfs.py
gs_lfs/: lfs.py
