[project]
name = "git-remote-s3"
version = "0.2.6"
description = "A git remote helper for Amazon S3"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">3.9"
dependencies = [
    "boto3 (>=1.34.155,<2.0.0)", 
    "botocore (>=1.39.4,<2.0.0)"
]

[project.urls]
repository = "https://github.com/GRAPHISOFT/git-remote-s3"

[project.scripts]
git-remote-s3 = "git_remote_s3.remote:main"
"git-remote-s3+zip" = "git_remote_s3.remote:main"
git-lfs-s3 = "git_remote_s3.lfs:main"
git-s3 = "git_remote_s3.manage:main"

[dependency-groups]
dev = [
    "flake8 (>=7.1.1,<8.0.0)",
    "flake8-bugbear (>=24.4.26,<25.0.0)",
    "mypy (>=1.11.1,<2.0.0)",
    "pytest (>=8.3.2,<9.0.0)",
    "mock (>=5.1.0,<6.0.0)",
    "black (>=24.8.0,<25.0.0)",
    "coverage (>=7.6.1,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
